# example-lib

./: .gitignore  .gitingnore  CMakeLists.txt  README.md  config.hpp.in  main.cpp
example/: CMakeLists.txt
lib/liba/: CMakeLists.txt
lib/liba/src/: liba.cpp
src/: liba.hpp  main.cpp
test/: CMakeLists.txt
